Update submodule to use master branch, updated pom to include test plugins
Signed-off-by: Ephraim Muhia <emuhia@ona.io>