@@ -365,6 +365,15 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<outputDirectory />
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
 					<execution>
@@ -386,6 +395,37 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>${main.basedir}/configs/build/maven.properties</file>
+								<file>${main.basedir}/configs/assets/config/opensrp.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+				<configuration>
+					<printSummary>true</printSummary>
+					<excludes>
+						<exclude>**/it/**</exclude>
+					</excludes>
+
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
@@ -439,6 +479,128 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>skip-integration-tests</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.9</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+									<argLine>-XX:MaxPermSize=1024M</argLine>
+									<excludes>
+										<exclude>**/it/**</exclude>
+									</excludes>
+									<redirectTestOutputToFile>true</redirectTestOutputToFile>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>integration-tests</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<build>
+				<!-- <pluginManagement> -->
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sql-maven-plugin</artifactId>
+						<version>1.5</version>
+						<dependencies>
+							<!-- <dependency> <groupId>postgresql</groupId> <artifactId>postgresql</artifactId> 
+								<version>9.1-901.jdbc4</version> </dependency> -->
+							<dependency>
+								<groupId>mysql</groupId>
+								<artifactId>mysql-connector-java</artifactId>
+								<version>${mysql.connector.version}</version>
+							</dependency>
+						</dependencies>
+
+						<configuration>
+							<driver>${jdbc.driverClassName}</driver>
+							<url>${jdbc.url-wo-db}</url>
+							<username>${jdbc.username}</username>
+							<password>${jdbc.password}</password>
+							<skip>${maven.test.skip}</skip>
+						</configuration>
+
+						<executions>
+							<!-- Database init scripts for DBMS specific configuration -->
+							<execution>
+								<id>drop-create-relational-db</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<url>${jdbc.url-wo-db}</url>
+									<username>${jdbc.username}</username>
+									<password>${jdbc.password}</password>
+									<autocommit>true</autocommit>
+									<sqlCommand>
+										drop database if exists ${db.quartz};
+										create
+										database ${db.quartz};
+									</sqlCommand>
+									<onError>abort</onError>
+								</configuration>
+							</execution>
+							<!-- END: Database init scripts for DBMS specific configuration -->
+							<execution>
+								<id>create-quartz-tables</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<url>${jdbc.url-wo-db}/${db.quartz}</url>
+									<username>${jdbc.username}</username>
+									<password>${jdbc.password}</password>
+									<autocommit>true</autocommit>
+									<srcFiles>
+										<srcFile>configs/build/sql/tables_quartz_${jdbc.backend}.sql</srcFile>
+									</srcFiles>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.9</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+									<argLine>-XX:MaxPermSize=1024M</argLine>
+									<includes>
+										<include>**/it/**</include>
+									</includes>
+									<redirectTestOutputToFile>true</redirectTestOutputToFile>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+				<!-- </pluginManagement> -->
+			</build>
+		</profile>
 		<profile>
 			<id>couchdb</id>
 			<activation>
